# metal_cpp_tut

./: CMakeLists.txt  Makefile  README.md
src/: compute.metal  main.cpp
